--- a/UEAHealthServer/src/main/resources/application.properties
+++ b/UEAHealthServer/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.url=jdbc:h2:file:./data/testdb
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect'
+springspring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = create
