--- a/UEAHealthServer/src/main/resources/application.properties
+++ b/UEAHealthServer/src/main/resources/application.properties
@@ -6,3 +6,5 @@ springspring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = create
+spring.h2.console.enabled=true
+spring.h2.console.path=/console/
