--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ HealthTrackerApp/target/classes/test.db
 UEAHealthServer/data/testdb.mv.db
 UEAHealthServer/data/testdb.trace.db
 HealthServerV2/data/testdb.mv.db
+HealthTrackerApp/src/main/resources/HealthTrackerDB.db
